Avalara Fullqa/src/CaseTimer/objects/Session_Time__c.object
<CustomObject>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Session_Times</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Session Times</relationshipLabel>
        <relationshipName>Session_Times</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Manual_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Entry</label>
        <type>Checkbox</type>
    </fields>
    <label>Session Time</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Session Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Times</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>